@@ -14,13 +14,13 @@ Version 2.23
   16517, 16519, 16520, 16521, 16620, 16734, 16973, 16985, 17118, 17243,
   17244, 17250, 17441, 17787, 17886, 17887, 17905, 18084, 18086, 18240,
   18265, 18370, 18421, 18480, 18525, 18595, 18589, 18610, 18618, 18647,
-  18661, 18674, 18675, 18681, 18724, 18757, 18778, 18781, 18787, 18789,
-  18790, 18795, 18796, 18803, 18820, 18823, 18824, 18825, 18857, 18863,
-  18870, 18872, 18873, 18875, 18887, 18918, 18921, 18928, 18951, 18952,
-  18953, 18956, 18961, 18966, 18967, 18969, 18970, 18977, 18980, 18981,
-  18982, 18985, 19003, 19007, 19012, 19016, 19018, 19032, 19046, 19049,
-  19050, 19059, 19071, 19074, 19076, 19077, 19078, 19079, 19085, 19086,
-  19088, 19094, 19095, 19124, 19125, 19129, 19134, 19137.
+  18661, 18674, 18675, 18681, 18724, 18743, 18757, 18778, 18781, 18787,
+  18789, 18790, 18795, 18796, 18803, 18820, 18823, 18824, 18825, 18857,
+  18863, 18870, 18872, 18873, 18875, 18887, 18918, 18921, 18928, 18951,
+  18952, 18953, 18956, 18961, 18966, 18967, 18969, 18970, 18977, 18980,
+  18981, 18982, 18985, 19003, 19007, 19012, 19016, 19018, 19032, 19046,
+  19049, 19050, 19059, 19071, 19074, 19076, 19077, 19078, 19079, 19085,
+  19086, 19088, 19094, 19095, 19124, 19125, 19129, 19134, 19137.
 
 * There is now a --disable-timezone-tools configure option for disabling the
   building and installing of the timezone related utilities (zic, zdump, and
